--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,64 @@
-<h2>Sign up</h2>
+<div class='container'>
+  <div class="row">
+    <div class="col-12">
+      <h3 class="row offset-1 pb-5">新規会員登録</h3>
+      <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+        <div class="field form-group row">
+          <%= f.label :"名前", class: "col-3" %>
+          <%= f.label :"(姓)", class: "col-1" %>
+          <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder:"令和", class: "col-3 form-control" %>
+          <%= f.label :"(名)", class: "col-1" %>
+          <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name",  placeholder:"道子",class: "col-3 form-control" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field form-group row">
+          <%= f.label :"フリガナ", class: "col-3" %>
+          <%= f.label :"(セイ)", class: "col-1" %>
+          <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder:"レイワ", class: "col-3 form-control" %>
+          <%= f.label :"(メイ)", class: "col-1" %>
+          <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder:"ミチコ",class: "col-3 form-control" %>
+        </div>
+
+        <div class="field form-group row">
+          <%= f.label :"メールアドレス", class: "col-4" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "col-3 form-control",  placeholder:"sample@example.com" %>
+        </div>
+
+        <div class="field form-group row">
+          <%= f.label :"郵便番号(ハイフンなし)", class: 'col-4' %>
+          <%= f.text_field :post_code, autocomplete: "post_code", class: 'col-3 form-control', placeholder:"0000000" %>
+        </div>
+
+        <div class="field form-group row">
+          <%= f.label :"住所", class: "col-4" %>
+          <%= f.text_field :address, autofocus: true, autocomplete: "address", class: "col-7 form-control", placeholder:"東京都渋谷区代々木神園町０－０" %>
+        </div>
+
+        <div class="field form-group row">
+          <%= f.label :"電話番号", class: "col-4" %>
+          <%= f.text_field :tel, autocomplete: "tel", class: "col-3 form-control", placeholder:"00000000000" %>
+        </div>
+
+        <div class="field form-group row">
+          <%= f.label :"パスワード(6文字以上)", class: "col-4" %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "col-3 form-control" %>
+        </div>
+
+        <div class="field form-group row">
+          <%= f.label :"パスワード(確認用)", class: "col-4" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "col-3 form-control" %>
+        </div>
+
+        <div class="row">
+          <%= f.submit "新規登録", class: 'btn btn-success offset-4 col-3' %>
+        </div>
+      <% end %>
+
+      <div class="mt-3">
+        <h4>既に登録済みの方</h4>
+        <p class="mt-3"><%= link_to "こちら", customer_session_path %> からログインしてください。</p>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
