--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,27 +1,34 @@
-<div class='container'>
-  <div class='row'>
-    <div class="col-9 mx-auto py-5">
-    <h3>注文履歴一覧</h3>
-    <table class="table table-secondary ">
-      <thead>
-        <tr>
-          <th>購入日時</th>
-          <th>購入者</th>
-          <th>注文個数</th>
-          <th>注文ステータス</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-            <% @orders.each do |order| %>
-              <td><%= order.created_at %></td>
-              <td><%= order.name %></td>
-              <td><%= order.count %></td>
-              <td><%= order.status %></td>
-            <% end %>
-        </tr>
-        </tbody>
-          <%= paginate @orders %>
+<div class="container">
+   <div class="row">
+      <div class="col-3 offset-1 pl-5 pb-2">
+        <h3>注文履歴一覧</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-8 mx-auto">
+        <table class="table">
+          <thead>
+            <tr class="table table-secondary">
+              <th scope="col">購入日時</th>
+              <th scope="col">購入者</th>
+              <th scope="col">注文個数</th>
+              <th scope="col">注文ステータス</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+               <% @orders.each do |order| %>
+                <td>
+                  <%= link_to order.create_at, admin_order_path(orders.id) %>
+                </td>
+                <td><%= order.name %></td>
+                <td><%= order.count %></td>
+                <td><%= order.status %></td>
+              <% end %>
+              <%= paginate @orders %>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-</div>
