--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,31 +1,77 @@
-<div class='container'>
-  <div class='row'>
-    <div class='col-md-3'>
-
-    <h3>注文履歴詳細</h3>
-    <table class="table table-borderless">
-      <tbody>
-        <tr>
-          <th>購入者</th>
-          <td><%= @order.customer.name %></td>
-        </tr>
-        <tr>
-          <th>購入日</th>
-          <td><%= @order.created_at %></td>
-        </tr>
-        <tr>
-          <th>配送先</th>
-          <td><%= @order.address %></td>
-        </tr>
-        <tr>
-          <th>支払方法</th>
-          <td><%= @order.payment_method %></td>
-        </tr>
-          <th>注文ステータス</th>
-          <td><%= @order.status %></td>
-      </tbody>
-    </table>
-
+<div class="container py-3">
+  <div class="row">
+    <div class="col-md-3 offset-1 pt-2">
+      <h3>注文履歴詳細</h3>
     </div>
-   </div>
   </div>
+  <div class="row">
+   <div class="col-8">
+     <table class="table table-borderless">
+          <tr>
+            <th>購入者</th>
+            <td>test</td>
+          </tr>
+          <tr>
+            <th>購入日</th>
+            <td>test</td>
+          </tr>
+          <tr>
+            <th>配送先</th>
+            <td>test</td>
+          </tr>
+          <tr>
+            <th>支払方法</th>
+            <td>test</td>
+          </tr>
+            <th>注文ステータス</th>
+            <td></td>
+            <td><%= link_to '更新',admin_order_path, class: "btn btn-success" %></td>
+       </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-8">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>制作ステータス</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>test</td>
+            <td>test</td>
+            <td>test</td>
+            <td>test</td>
+            <td>test</td>
+            <td>test</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4 align-self-end">
+      <table class="table table-borderless">
+        <tbody>
+          <tr>
+            <th>合計金額</th>
+            <td>test</td>
+          </tr>
+          <tr>
+            <th>送料</th>
+            <td>test</td>
+          </tr>
+          <tr>
+            <th>請求金額合計</th>
+            <th>test</th>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+ </div>
+</div>
