--- a/app/views/public/delivery_addresses/edit.html.erb
+++ b/app/views/public/delivery_addresses/edit.html.erb
@@ -1,1 +1,23 @@
 <h3>配送先編集</h3>
+
+<!------------ 配送先登録部分 ------------>
+<%= form_with model: @delivery_address, url: public_delivery_address_path, local: true do |f| %>
+    <div class="row form-group pt-3">
+        <div class="col-md-3"><%= f.label :郵便番号 %></div>
+        <div class="col-md-4"><%= f.text_field :post_code, autofocus: true, placeholder:"0000000", class:"form-control" %></div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3"><%= f.label :住所 %></div>
+        <div class="col-md-7"><%= f.text_area :address, placeholder:"東京都渋谷区代々木神園町0-0", class:"form-control" %></div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3"><%= f.label :宛名 %></div>
+        <div class="col-md-4 md-2"><%= f.text_field :name, placeholder:"令和道子", class:"form-control" %></div>
+    </div>
+
+    <div>
+        <%= f.submit "変更内容を保存", class: "btn btn-outline-primary btn-lg" %>
+    </div>
+<% end %>
