--- a/app/views/public/delivery_addresses/index.html.erb
+++ b/app/views/public/delivery_addresses/index.html.erb
@@ -1,1 +1,48 @@
 <h3>配送先登録/一覧</h3>
+
+<!------------ 配送先登録部分 ------------>
+<%= form_with model: @delivery_address, url: public_delivery_addresses_path, local: true do |f| %>
+    <div class="row form-group pt-3">
+        <div class="col-md-3"><%= f.label :郵便番号 %></div>
+        <div class="col-md-4"><%= f.text_field :post_code, autofocus: true, placeholder:"0000000", class:"form-control" %></div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3"><%= f.label :住所 %></div>
+        <div class="col-md-7"><%= f.text_area :address, placeholder:"東京都渋谷区代々木神園町0-0", class:"form-control" %></div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3"><%= f.label :宛名 %></div>
+        <div class="col-md-4 md-2"><%= f.text_field :name, placeholder:"令和道子", class:"form-control" %></div>
+    </div>
+
+    <div class="col-md-10 text-right">
+        <%= f.submit "新規登録", class: "btn btn-outline-primary btn-lg" %>
+    </div>
+<% end %>
+
+<!------------ 配送先一覧部分 ------------>
+<table class="table table-light table-striped mt-5 col-12">
+    <thead class="table-active">
+        <tr class="text-white bg-dark">
+            <th>郵便番号</th>
+            <th>住所</th>
+            <th>宛名</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @delivery_addresses.each do |d| %>
+            <tr>
+                <td><%= d.post_code %></td>
+                <td><%= d.address %></td>
+                <td><%= d.name %></td>
+                <td class="text-center">
+                    <%= link_to "編集する", edit_public_delivery_address_path(d.id), class:"btn btn-primary btn-sm mr-auto md-1 mr-5" %>
+                    <%= link_to "削除する", public_delivery_address_path(d.id), method: :delete, class:"btn btn-danger btn-sm md-1 ml-5" %>
+                </td>
+            </tr>
+        <% end %>
+    </tbody>
+</table>
