--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,16 +1,42 @@
-　　<div class = "text-right"><%= link_to '＋商品新規登録', new_admin_item_path %></div>
+<div class="contener my-3">
+  <div class="row">
+    <div class="col-9 mx-auto">
+      <h4>商品一覧</h4>
+      <div class="text-right"><%= link_to '＋商品新規登録', new_admin_item_path %></div>
       <table class="table">
-    <% @items.each do |item| %>
-        <%= item.id %>
-          <%= link_to admin_item_path(item.id) do %>
-            <%= item.name %>
+        <thead>
+          <tr>
+            <th></th>
+            <th>商品ID</th>
+            <th>商品名</th>
+            <th>税抜価格</th>
+            <th>ジャンル</th>
+            <th>ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @items.each do |item| %>
+            <tr>
+              <td></td>
+              <td><%= item.id %></td>
+              <td>
+                <%= link_to admin_item_path(item.id) do %>
+                  <%= item.name %>
+                <% end %>
+              </td>
+              <td><%= item.price_without_tax %></td>
+              <td><%= item.genre.name %></td>
+              <td>
+                <% if item.is_sold == true %>
+                  <div class="text-success font-weight-bold"><%= "販売中" %></div>
+                <% else %>
+                  <div class="text-danger font-weight-bold"><%= "販売停止中" %></div>
+                <% end %>
+              </td>
+            </tr>
           <% end %>
-        <%= item.price_without_tax %>
-        <%= item.genre.name %>
-          <% if item.is_sold == true %>
-            <div class = text-success><%= "販売中" %></div>
-          <% else %>
-            <div class = text-danger><%= "販売停止中" %></div>
-          <% end %>
-    <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
