--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -33,23 +33,23 @@
         <tbody>
           <% @my_cart_items.each do |cart_item| %>
             <tr>
-              <td>
+              <td class="align-middle">
                 <%= attachment_image_tag cart_item.item, :image, :fill, 50, 50, resize:"50×50" %>
                 <%= cart_item.item.name %>
               </td>
-              <td>
+              <td class="align-middle">
                 <%= "￥#{cart_item.item.with_tax_price.to_s(:delimited)}" %>
               </td>
-              <td>
+              <td class="align-middle">
                 <%= form_with model: cart_item, url: public_cart_item_path(cart_item) do |f| %>
                   <%= f.select :count, *[1..9] %>
                   <%= f.submit '変更', class: "btn btn-success" %>
                 <% end %>
               </td>
-              <td>
+              <td class="align-middle">
                 <%= "￥#{cart_item.subtotal_price.to_s(:delimited)}" %>
               </td>
-              <td>
+              <td class="align-middle">
                 <%= link_to public_cart_item_path(cart_item), method: :delete, data: {confirm: "カートから削除しますか？"} do %>
                   <button type="button" class="btn btn-danger">削除する</button>
                 <% end %>
