--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,32 +1,34 @@
 <div class="container py-3">
   <div class="row">
-    <div class="col-md-3 offset-1 pt-2">
+    <div class="col-md-3 offset-1 py-2">
       <h3>注文履歴詳細</h3>
     </div>
   </div>
   <div class="row">
-   <div class="col-8">
-     <table class="table table-borderless">
+    <div class="col-8 pb-3">
+      <table class="table table-borderless">
           <tr>
             <th>購入者</th>
-            <td>test</td>
+            <td><%= @order.name %></td>
           </tr>
           <tr>
             <th>購入日</th>
-            <td>test</td>
+            <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
           </tr>
           <tr>
             <th>配送先</th>
-            <td>test</td>
+            <td>〒<%= @order.post_code %><%= @order.address %></td>
           </tr>
           <tr>
             <th>支払方法</th>
-            <td>test</td>
+            <td><%= @order.payment_method_i18n %></td>
           </tr>
             <th>注文ステータス</th>
-            <td></td>
-            <td><%= link_to '更新',admin_order_path, class: "btn btn-success" %></td>
-       </table>
+           <%= form_with model: @order, url: admin_order_path, method: :patch, local: true do |f| %>
+            <td><%= f.select :order_status, Order.order_statuses.keys.map {|k| [I18n.t("enums.order.order_status.#{k}"), k]}%>
+            <span class= "pl-5"><%= f.submit "更新" , class: "btn btn-success" %></span></td>
+           <% end %>
+      </table>
     </div>
   </div>
   <div class="row">
@@ -43,14 +45,19 @@
           </tr>
         </thead>
         <tbody>
+         <% @order_details.each do |order_detail| %>
           <tr>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.item.with_tax_price %></td>
+            <td><%= order_detail.count %></td>
+            <td><%= order_detail.subtotal_price %></td>
+           <%= form_with model: order_detail, url: admin_order_detail_path, method: :patch, local: true do |f| %>
+             <%= f.hidden_field :id, value: order_detail.id %>
+            <td><%= f.select :making_status, OrderDetail.making_statuses.keys.map {|k| [I18n.t("enums.order_detail.making_status.#{k}"), k]}%></td>
+            <td><%= f.submit "更新" , class: "btn btn-success" %></td>
+           <% end %>
           </tr>
+         <% end %>
         </tbody>
       </table>
     </div>
@@ -59,15 +66,15 @@
         <tbody>
           <tr>
             <th>合計金額</th>
-            <td>test</td>
+            <td><%= OrderDetail.calc_total_price(@order_details) %>円</td>
           </tr>
           <tr>
             <th>送料</th>
-            <td>test</td>
+            <td><%= @order.delivery_cost %>円</td>
           </tr>
           <tr>
             <th>請求金額合計</th>
-            <th>test</th>
+            <th><%= OrderDetail.calc_total_price(@order_details) + @order.delivery_cost %>円</th>
           </tr>
         </tbody>
       </table>
