[Add]注文機能と注文詳細追加

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h3 class="text-white bg-secondary">マイページ</h3>
+  <h3 class="text-decoration-underline"><u>マイページ</u></h3>
   <div class="row">
     <h5 class="font-weight-bold col-2 align-self-center">登録情報</h5>
     <div class="col-5"><%= link_to "編集する", edit_public_customer_path, class:"btn btn-success" %></div>
