--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,198 @@
  @import "bootstrap";
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
+
+//ログイン、新規登録画面
+.fluid {
+  width:40vh;
+  height: 40vh;
+  background: #fff100;
+  animation: fluidrotate 30s ease 0s infinite;
+}
+
+@keyframes fluidrotate {
+
+  0%, 100% {
+  border-radius: 63% 37% 54% 46%/55% 48% 52% 45%;
+  }
+  14% {
+  border-radius: 40% 60% 54% 46%/49% 60% 40% 51%;
+  }
+  28% {
+  border-radius: 54% 46% 38% 62%/49% 70% 30% 51%;
+  }
+  42% {
+  border-radius: 61% 39% 55% 45%/61% 38% 62% 39%;
+  }
+  56% {
+  border-radius: 61% 39% 67% 33%/70% 50% 50% 30%;
+  }
+  70% {
+  border-radius: 50% 50% 34% 66%/56% 68% 32% 44%;
+  }
+  84% {
+  border-radius: 46% 54% 50% 50%/35% 61% 39% 65%;
+  }
+
+}
+
+.fluid2 {
+  width:40vh;
+  height: 40vh;
+  background: palegreen;
+  animation: fluidrotate 30s ease 0s infinite;
+}
+@keyframes fluidrotate {
+  0%, 100% {
+  border-radius: 63% 37% 54% 46%/55% 48% 52% 45%;
+  }
+  14% {
+  border-radius: 40% 60% 54% 46%/49% 60% 40% 51%;
+  }
+  28% {
+  border-radius: 54% 46% 38% 62%/49% 70% 30% 51%;
+  }
+  42% {
+  border-radius: 61% 39% 55% 45%/61% 38% 62% 39%;
+  }
+  56% {
+  border-radius: 61% 39% 67% 33%/70% 50% 50% 30%;
+  }
+  70% {
+  border-radius: 50% 50% 34% 66%/56% 68% 32% 44%;
+  }
+  84% {
+  border-radius: 46% 54% 50% 50%/35% 61% 39% 65%;
+  }
+
+}
+
+.fluid3 {
+  width:40vh;
+  height: 40vh;
+  background: #afeeee;
+  animation: fluidrotate 30s ease 0s infinite;
+}
+@keyframes fluidrotate {
+  0%, 100% {
+  border-radius: 63% 37% 54% 46%/55% 48% 52% 45%;
+  }
+  14% {
+  border-radius: 40% 60% 54% 46%/49% 60% 40% 51%;
+  }
+  28% {
+  border-radius: 54% 46% 38% 62%/49% 70% 30% 51%;
+  }
+  42% {
+  border-radius: 61% 39% 55% 45%/61% 38% 62% 39%;
+  }
+  56% {
+  border-radius: 61% 39% 67% 33%/70% 50% 50% 30%;
+  }
+  70% {
+  border-radius: 50% 50% 34% 66%/56% 68% 32% 44%;
+  }
+  84% {
+  border-radius: 46% 54% 50% 50%/35% 61% 39% 65%;
+  }
+
+}
+
+
+header {
+	width: 100%;
+	background:linear-gradient(45deg, white,white,pink);
+	background-size: 200% 200%;
+	animation: bggradient 30s ease infinite;
+}
+
+@keyframes bggradient{
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+//トップページ
+#splash {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background:#333;
+  text-align:center;
+  color:#fff;
+}
+
+#splash_logo {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.fadeUp{
+  animation-name: fadeUpAnime;
+  animation-duration:0.5s;
+  animation-fill-mode:forwards;
+  opacity: 0;
+}
+
+@keyframes fadeUpAnime{
+  from {
+    opacity: 0;
+  transform: translateY(100px);
+  }
+
+  to {
+    opacity: 1;
+  transform: translateY(0);
+  }
+}
+
+//アバウトページ
+.TextTyping span {
+	display: none;
+}
+
+.TextTyping::after {
+ 	content: "|";
+	animation: typinganime .8s ease infinite;
+}
+
+@keyframes typinganime{
+	from{opacity:0}
+	to{opacity:1}
+}
+//ヘッダー
+.navbar-nav li a{
+	position: relative;
+}
+
+.navbar-nav li.current a,
+.navbar-nav li a:hover{
+	color:#0481A2;
+}
+
+.navbar-nav li a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    width: 80%;
+    height: 2px;
+    background:black;
+    transition: all .3s;
+    transform: scale(0, 1);
+    transform-origin: center top;
+}
+
+.navbar-nav li.current a::after,
+.navbar-nav li :hover::after {
+    transform: scale(1, 1);
+}
