--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <div class='container'>
   <div class="row">
-    <div class="col-12">
-      <h3 class="row offset-1 pb-5">新規会員登録</h3>
+    <div class="col-12" style="position: relative;">
+      <div class="fluid2" style="position: absolute;"></div>
+      <h3 class="row offset-1 mt-5" style="z-index: 100; position: relative;">新規会員登録</h3>
       <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="field form-group row">
           <%= f.label :"名前", class: "col-3" %>
@@ -59,6 +59,7 @@
       <div class="mt-3">
         <h4>既に登録済みの方</h4>
         <p class="mt-3"><%= link_to "こちら", customer_session_path %> からログインしてください。</p>
+      </div>
     </div>
   </div>
 </div>
