--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class="row">
     <div class="col-12" style="position: relative;">
-      <div class="fluid2" style="position: absolute;"></div>
+      <div class="fluid2" style="position: absolute; top: 60px;"></div>
       <h3 class="row offset-1 mt-5" style="z-index: 100; position: relative;">新規会員登録</h3>
       <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
 
