--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,7 @@
  <div class="container">
-    <div class="row">
-      <div class="col-2 offset-1 pl-5">
-        <h3>会員一覧</h3>
+    <div class="row pb-3">
+      <div  class="col-2 offset-1 table-secondary text-center">
+        <h3 class="d-inline-flex px-2 pt-2 bd-highlight ">会員一覧</h3>
       </div>
     </div>
     <div class="row">
@@ -9,29 +9,29 @@
         <table class="table">
           <thead>
             <tr class="table-secondary">
-              <th scope="col">会員ID</th>
-              <th scope="col">氏名</th>
-              <th scope="col">メールアドレス</th>
-              <th scope="col">ステータス</th>
+              <th>会員ID</th>
+              <th class="text-decoration-underline pr-2"><u>氏名</u></th>
+              <th>メールアドレス</th>
+              <th>ステータス</th>
             </tr>
           </thead>
           <tbody>
             <% @customers.each do |customer| %>
               <tr>
                 <td><%= customer.id %></td>
-                <td><%= link_to customer.last_name+customer.first_name, admin_customer_path(customer.id) %></td>
+                <td class="text-decoration-underline pr-5"><u><%= link_to customer.last_name+customer.first_name, admin_customer_path(customer.id), class: "text-dark" %></u></td>
                 <td><%= customer.email %></td>
                 <% if customer.is_deleted == false %>
-                 <td class="text-success"><%= "有効" %></td>
+                 <td class="text-success font-weight-bold"><%= "有効" %></td>
                   <% else %>
                  <td><%= "退会" %></td>
                 <% end %>
               </tr>
             <% end %>
-            <%= paginate @customers %>
           </tbody>
         </table>
       </div>
     </div>
-  </div>
+   </div>
+  <div class="d-flex justify-content-center"><%= paginate @customers %></div>
 </div>
