--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,16 +1,16 @@
-<div class='container px-5'>
-  <div class="row">
-    <div class="col-12">
-      <h3 class="row offset-1 py-3">会員情報編集</h3>
+<div class="container">
+  <div class="row py-3">
+    <div  class="col-3 offset-1 table-secondary text-center">
+      <h3 class="d-inline-flex px-2 pt-2 bd-highlight">会員情報編集</h3>
     </div>
   </div>
 
-  <div class="row">
-   <div class="col-7">
-       <div class="row form-group pt-3">
-         <div class="col-3">会員ID</div>
-         <div class="col-3"><%= @customer.id %></div>
-       </div>
+ <div class="row">
+    <div class="col-7">
+      <div class="row form-group pt-3">
+        <div class="col-3">会員ID</div>
+        <div class="col-3"><%= @customer.id %></div>
+      </div>
 
     <%= form_with model: @customer, url: admin_customer_path, local: true do |f| %>
       <div class="row form-group pt-3">
@@ -47,7 +47,7 @@
 
       <div class="row form-group pt-3">
         <div class="col-3"><%= f.label :会員ステータス %></div>
-          <%= f.radio_button :is_deleted, true ,checked: true %>退会
+          <%= f.radio_button :is_deleted, true ,checked: true %> 退会
           <%= f.radio_button :is_deleted, false ,class: "offset-1" %> 有効
       </div>
 
