--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container pt-3">
   <div class="row">
-    <div class="col-md-7 offset-1 p-3">
-      <h4><%= @customer.last_name %> <%= @customer.first_name %>さんの会員詳細</h4>
+    <div class="col-md-5 offset-1 p-3 table-secondary text-center">
+      <h4 class="pt-2 bd-highlight"><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4>
     </div>
   </div>
   <div class="row">
@@ -14,7 +14,7 @@
           </tr>
           <tr>
             <th>氏名</th>
-            <td><%= @customer.last_name %> <%= @customer.first_name %></td>
+            <td><%= @customer.last_name %><%= @customer.first_name %></td>
           </tr>
           <tr>
             <th>フリガナ</th>
@@ -39,7 +39,7 @@
           <tr>
             <th>会員ステータス</th>
             <% if @customer.is_deleted == false %>
-            <td class="text-success"><%= "有効" %> </td>
+            <td class="text-success font-weight-bold"><%= "有効" %> </td>
               <% else %>
             <td><%= "退会" %></td>
             <% end %>
