--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,10 +1,13 @@
 <div class="container">
-   <div class="row">
-      <div class="mx-auto offset-1 pb-2">
-        <h3>注文履歴一覧</h3>
-      <div class=" mx-auto">
+    <div class="row py-3">
+      <div  class="col-3 offset-1 table-secondary text-center my-2">
+        <h3 class="d-inline-flex pt-2 bd-highlight">注文履歴一覧</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-8 mx-auto">
         <table class="table">
-          <thead class="table table-secondary">
+          <thead class="table-secondary">
             <tr>
               <th>購入日時</th>
               <th>購入者</th>
@@ -12,21 +15,21 @@
               <th>注文ステータス</th>
             </tr>
           </thead>
-          <tbody>
-           <% @orders.each do |order| %>
+         <tbody>
+            <% @orders.each do |order| %>
             <tr>
-                <td>
-                   <%= link_to order.created_at.strftime("%Y/%m/%d %H:%M:%S"), admin_order_path(order.id) %>
+                <td class="text-decoration-underline" >
+                  <u><%= link_to order.created_at.strftime("%Y/%m/%d %H:%M:%S"), admin_order_path(order.id) ,class: "text-dark"%></u>
                 </td>
                 <td><%= order.name %></td>
                 <td><%= order.order_details.inject(0) { |sum, order_detail| sum + order_detail.count } %></td>
                 <td><%= order.order_status_i18n %></td>
             </tr>
-           <% end %>
-              <%= paginate @orders %>
-            </tr>
-          </tbody>
+            <% end %>
+         </tbody>
         </table>
       </div>
     </div>
-  </div>
+   <div class="d-flex justify-content-center"><%= paginate @orders %></div>
+ </div>
+
