--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
-  <div class = "mx-auto  row  pt-5">
+  <div class = "mx-auto  row  pt-3">
     <!--ジャンル検索欄）-->
-    <div class="col-2 mt-5">
+    <div class="col-2">
       <div class="list-group">
         <sapn class="list-group-item">ジャンル検索</sapn>
         <% @genres.each do |genre| %>
@@ -13,15 +13,17 @@
     </div>
     <!--商品一覧-->
     <div class = "col-10">
-      <h3 class = "heading">商品一覧<span>（<%= "#{@all_items.count}件" %>）</span></h3>
-      <div class = "items-list">
+      <h3 class = "m-2 py-2" style = 'background: linear-gradient(to right, #fff 0%, #ffd6ff 30%, #ffd6ff 70%, #fff 100%);  font-weight: 600; width: 100%;' >
+        商品一覧<span class = "h5">（<%= "#{@all_items.count}件" %>）</span>
+      </h3>
+      <div class = "items-list d-flex flex-wrap w-100">
         <% if !(@items.blank?) %>
           <% @items.each do |item| %>
-            <div class = "item">
-              <%= link_to public_item_path(item) do %>
-                <%= attachment_image_tag item, :image, :fill, 200, 200, resize:"200×200", class:"index-img" %>
-                <p class = "h6"><%= item.name %></p>
-                <p class = "h6 text-right">￥<%= item.price_without_tax %></p>
+            <div class = "item p-3 w-25  text-truncate">
+              <%= link_to public_item_path(item), style: "text-decoration: none;" do %>
+                <%= attachment_image_tag item, :image, :fill, 200, 200, resize:"200×200", class:"index-img w-100"%>
+                <p class = "h6 text-secondary"><%= item.name %></p>
+                <p class = "h6 text-right text-secondary" ><%= item.price_without_tax %>円（税抜）</p>
               <% end %>
             </div>
           <% end %>
