--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <h2>注文履歴一覧</h2>
+      <h2><u>注文履歴一覧</u></h2>
     </div>
     <div class="col-md-12">
       <table class="table table-bordered border border-dark">
