--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -4,7 +4,7 @@
         <div class="col-md-12">
           <h2 class="text-decoration-underline"><u>注文履歴詳細</u></h2>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 pt-3">
             <h3>注文情報</h3>
             <table class="table table-bordered">
                 <tr>
@@ -30,7 +30,7 @@
                 </tr>
             </table>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 pt-3">
             <h3>請求情報</h3>
             <table class="table table-bordered">
                 <tr>
@@ -51,7 +51,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 pt-3">
             <h3>注文内容</h3>
             <table class="table table-bordered border border-dark">
                 <thead>
