--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,40 +1,46 @@
-<h3>会員情報編集</h3>
+<div class="container">
+  <h3 class="my-4"><u>会員情報編集</u></h3>
+    <%= form_with model: @customer, url: public_customer_path, local: true do |f| %>
+      <%= render 'layouts/error_messages', model: f.object %>
+      <div class="row form-group pt-3">
+        <div class="col-3"><%= f.label :氏名 %></div>
+        <div class="col-md-3"><%= f.text_field :last_name, class:"form-control" %></div>
+        <div class="col-md-3"><%= f.text_field :first_name, class:"form-control" %></div>
+      </div>
 
-<%= form_with model: @customer, url: public_customer_path, local: true do |f| %>
-  <div class="row form-group pt-3">
-    <div class="col-3"><%= f.label :氏名 %></div>
-    <div class="col-md-3"><%= f.text_field :last_name, class:"form-control" %></div>
-    <div class="col-md-3"><%= f.text_field :first_name, class:"form-control" %></div>
-  </div>
+      <div class="row form-group pt-3">
+        <div class="col-3"><%= f.label :フリガナ %></div>
+        <div class="col-md-3"><%= f.text_field :last_name_kana, class:"form-control" %></div>
+        <div class="col-md-3"><%= f.text_field :first_name_kana, class:"form-control" %></div>
+      </div>
 
-  <div class="row form-group pt-3">
-    <div class="col-3"><%= f.label :フリガナ %></div>
-    <div class="col-md-3"><%= f.text_field :last_name_kana, class:"form-control" %></div>
-    <div class="col-md-3"><%= f.text_field :first_name_kana, class:"form-control" %></div>
-  </div>
+      <div class="row form-group pt-3">
+        <div class="col-3"><%= f.label :郵便番号 %></div>
+        <div class="col-md-6"><%= f.text_field :post_code, class:"form-control" %></div>
+      </div>
 
-  <div class="row form-group pt-3">
-    <div class="col-3"><%= f.label :郵便番号 %></div>
-    <div class="col-md-3"><%= f.text_field :post_code, class:"form-control" %></div>
-  </div>
+      <div class="row form-group pt-3">
+        <div class="col-3"><%= f.label :住所 %></div>
+        <div class="col-md-6"><%= f.text_field :address, class:"form-control" %></div>
+      </div>
 
-  <div class="row form-group pt-3">
-    <div class="col-3"><%= f.label :住所 %></div>
-    <div class="col-md-3"><%= f.text_field :address, class:"form-control" %></div>
-  </div>
+      <div class="row form-group pt-3">
+        <div class="col-3"><%= f.label :電話番号 %></div>
+        <div class="col-md-6"><%= f.text_field :tel, class:"form-control" %></div>
+      </div>
 
-  <div class="row form-group pt-3">
-    <div class="col-3"><%= f.label :電話番号 %></div>
-    <div class="col-md-3"><%= f.text_field :tel, class:"form-control" %></div>
-  </div>
+      <div class="row form-group pt-3">
+        <div class="col-3"><%= f.label :メールアドレス %></div>
+        <div class="col-md-6"><%= f.email_field :email, class:"form-control" %></div>
+      </div>
 
-  <div class="row form-group pt-3">
-    <div class="col-3"><%= f.label :メールアドレス %></div>
-    <div class="col-md-3"><%= f.email_field :email, class:"form-control" %></div>
-  </div>
-
-  <div class="row form-group pt-3">
-    <%= f.submit "編集内容を保存", class:"btn btn-success" %>
-    <%= link_to "退会する", public_unsubscribe_path, class:"btn btn-danger" %>
-  </div>
-<% end %>
+      <div class="row justify-content-center ml-5 pl-3">
+        <div class="col-md-4 ml-5 pl-5">
+          <%= f.submit "編集内容を保存", class:"btn btn-success" %>
+        </div>
+        <div class="col-md-4 ml-5">
+          <%= link_to "退会する", public_unsubscribe_path, class:"btn btn-danger" %>
+        </div>
+      </div>
+    <% end %>
+</div>
