--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <div class='container'>
+  <div class = "flash_message"><%= flash[:notice] %></div>
   <div class="row">
     <div class="col-12" style="position: relative;">
       <div class="fluid2" style="position: absolute; top: 60px;"></div>
