--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,3 +1,8 @@
+<!--フラッシュメッセージ-->
+<% flash.each do |message_type, message| %>
+  <div class="alert alert-<%= message_type %> text-center"><%= message %></div>
+<% end %>
+
 <div class="container pt-3">
   <div class="row">
     <div class="col-md-5 offset-1 p-3 table-secondary text-center">
@@ -53,7 +58,7 @@
       <%= link_to '編集する', edit_admin_customer_path, class: "btn btn-success" %>
     </div>
     <div class="col-md-3 offset-1">
-      <%= link_to '注文履歴一覧を見る',admin_root_path, class: "btn btn-primary" %>
+      <%= link_to '注文履歴一覧を見る',admin_order_detail_path(@order.customer.id), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
