--- a/app/views/admin/order_details/show.html.erb
+++ b/app/views/admin/order_details/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="row py-3">
-      <div  class="col-3 offset-1 table-secondary text-center my-2">
-        <h3 class="d-inline-flex pt-2 bd-highlight">注文履歴一覧</h3>
+    <div class="row pt-3">
+      <div  class="col-md-5 offset-1 table-secondary text-center my-2">
+        <h4 class="d-inline-flex pt-2 bd-highlight"><%= @customer.full_name %>さんの注文履歴一覧</h4>
       </div>
     </div>
     <div class="row">
@@ -9,28 +9,30 @@
         <table class="table">
           <thead class="table-secondary">
             <tr>
+              <th class="col-1"></th>
               <th>購入日時</th>
-              <th>購入者</th>
               <th>注文個数</th>
               <th>注文ステータス</th>
             </tr>
-          </thead>
-         <tbody>
+      　　  </thead>
+       　  <tbody>
             <% @orders.each do |order| %>
-            <tr>
+              <tr>
+                <td></td>
                 <td class="text-decoration-underline" >
+                <!--注文日（年/月/日/時/分/秒)-->
                   <u><%= link_to order.created_at.strftime("%Y/%m/%d %H:%M:%S"), admin_order_path(order.id), class: "text-dark"%></u>
                 </td>
-                <td class="text-decoration-underline" >
-                  <u><%= link_to order.customer.full_name, admin_order_detail_path(order.customer.id), class: "text-dark" %></td></u>
+                <!--オーダーの合計-->
                 <td><%= order.order_details.inject(0) { |sum, order_detail| sum + order_detail.count } %></td>
+                <!--注文ステータス日本語化-->
                 <td><%= order.order_status_i18n %></td>
-            </tr>
+              </tr>
             <% end %>
-         </tbody>
+          </tbody>
         </table>
       </div>
     </div>
+    <!--paginationの記述-->
    <div class="d-flex justify-content-center"><%= paginate @orders %></div>
- </div>
-
+</div>
