[Update]顧客側のフラッシュメッセージ部分追加

--- a/app/views/public/orders/finish.html.erb
+++ b/app/views/public/orders/finish.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-md-1">
-      <h1>ご注文ありがとうございました！</h1>
-    </div>
+  <div class="row d-flex justify-content-center align-items-center" style="height: 500px;">
+    <h4>ご注文ありがとうございました！</h4>
   </div>
 </div>
