--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -21,7 +21,7 @@
 
       <div class="row form-group pt-3">
         <div class="col-3"><%= f.label :住所 %></div>
-        <div class="col-md-6"><%= f.text_field :address, class:"form-control" %></div>
+        <div class="col-md-6"><%= f.text_area :address, class:"form-control" %></div>
       </div>
 
       <div class="row form-group pt-3">
@@ -36,10 +36,10 @@
 
       <div class="row justify-content-center ml-5 pl-3">
         <div class="col-md-4 ml-5 pl-5">
-          <%= f.submit "編集内容を保存", class:"btn btn-success" %>
+          <%= f.submit "編集内容を保存", class:"btn btn-outline-success" %>
         </div>
         <div class="col-md-4 ml-5">
-          <%= link_to "退会する", public_unsubscribe_path, class:"btn btn-danger" %>
+          <%= link_to "退会する", public_unsubscribe_path, class:"btn btn-outline-danger" %>
         </div>
       </div>
     <% end %>
