--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -7,7 +7,7 @@
     </p>
   </div>
   <div>
-    <%= link_to '退会しない', public_customer_path, class:"btn btn-primary mx-3" %>
-    <%= link_to "退会する", public_withdraw_path, method: :patch, class:"btn btn-danger mx-3", data: {confirm: "本当に退会しますか？"} %>
+    <%= link_to '退会しない', public_customer_path, class:"btn btn-outline-primary mx-3" %>
+    <%= link_to "退会する", public_withdraw_path, method: :patch, class:"btn btn-outline-danger mx-3", data: {confirm: "本当に退会しますか？"} %>
   </div>
 </div>
