--- a/app/views/public/delivery_addresses/edit.html.erb
+++ b/app/views/public/delivery_addresses/edit.html.erb
@@ -1,24 +1,26 @@
-<h3><u>配送先編集</u></h3>
-
-<!------------ 配送先登録部分 ------------>
-<%= form_with model: @delivery_address, url: public_delivery_address_path, local: true do |f| %>
-    <%= render 'layouts/error_messages', model: f.object %>
-    <div class="row form-group pt-3">
-        <div class="col-md-3"><%= f.label :郵便番号 %></div>
-        <div class="col-md-4"><%= f.text_field :post_code, autofocus: true, placeholder:"0000000", class:"form-control" %></div>
+<div class="container">
+    <div class="row mt-5 mb-5">
+        <div class="col">
+            <h3><u>配送先編集</u></h3>
+            <!------------ 配送先登録部分 ------------>
+            <%= form_with model: @delivery_address, url: public_delivery_address_path, local: true do |f| %>
+            <%= render 'layouts/error_messages', model: f.object %>
+                <table class="table table-hover mb-4">
+                    <tr>
+                        <th>郵便番号(ハイフン無し)</th>
+                        <td><%= f.text_field :post_code, autofocus: true, placeholder:"0000000", class:"form-control" %></td>
+                    </tr>
+                    <tr>
+                        <th>住所</th>
+                        <td><%= f.text_area :address, placeholder:"東京都渋谷区代々木神園町0-0", class:"form-control" %></td>
+                    </tr>
+                    <tr>
+                        <th>宛名</th>
+                        <td><%= f.text_field :name, placeholder:"令和道子", class:"form-control" %></td>
+                        <td><%= f.submit "変更内容を保存", class: "btn btn-outline-primary" %></td>
+                    </tr>
+                </table>
+            <% end %>
+        </div>
     </div>
-
-    <div class="row form-group">
-        <div class="col-md-3"><%= f.label :住所 %></div>
-        <div class="col-md-7"><%= f.text_area :address, placeholder:"東京都渋谷区代々木神園町0-0", class:"form-control" %></div>
-    </div>
-
-    <div class="row form-group">
-        <div class="col-md-3"><%= f.label :宛名 %></div>
-        <div class="col-md-4 md-2"><%= f.text_field :name, placeholder:"令和道子", class:"form-control" %></div>
-    </div>
-
-    <div>
-        <%= f.submit "変更内容を保存", class: "btn btn-outline-primary btn-lg" %>
-    </div>
-<% end %>
+</div>
