--- a/app/views/public/delivery_addresses/index.html.erb
+++ b/app/views/public/delivery_addresses/index.html.erb
@@ -1,54 +1,54 @@
 
-<div class = "flash_message">
-    <%= flash[:notice] %>
+<div class="container">
+    <div class = "flash_message text-center text-primary"><%= flash[:primary] %></div>
+    <div class = "flash_message text-center text-success"><%= flash[:success] %></div>
+    <div class = "flash_message text-center text-danger"><%= flash[:danger] %></div>
+    <div class="row mt-5 mb-5">
+        <div class="col">
+            <h3><u>配送先登録/一覧</u></h3>
+            <!------------ 配送先登録部分 ------------>
+            <%= form_with model: @delivery_address, url: public_delivery_addresses_path, local: true do |f| %>
+            <%= render 'layouts/error_messages', model: f.object %>
+                <table class="table table-hover mb-4">
+                    <tr>
+                        <th>郵便番号(ハイフン無し)</th>
+                        <td><%= f.text_field :post_code, autofocus: true, placeholder:"0000000", class:"form-control" %></td>
+                    </tr>
+                    <tr>
+                        <th>住所</th>
+                        <td><%= f.text_area :address, placeholder:"東京都渋谷区代々木神園町0-0", class:"form-control" %></td>
+                    </tr>
+                    <tr>
+                        <th>宛名</th>
+                        <td><%= f.text_field :name, placeholder:"令和道子", class:"form-control" %></td>
+                        <td><%= f.submit "新規登録", class: "btn btn-outline-primary" %></td>
+                    </tr>
+                </table>
+            <% end %>
+                <!------------ 配送先一覧部分 ------------>
+                <table class="table table-hover table-bordered mb-5">
+                    <thead class="table-active">
+                        <tr class="">
+                            <th>郵便番号</th>
+                            <th>住所</th>
+                            <th>宛名</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @delivery_addresses.each do |d| %>
+                            <tr>
+                                <td><%= d.post_code %></td>
+                                <td><%= d.address %></td>
+                                <td><%= d.name %></td>
+                                <td class="text-center">
+                                    <%= link_to "編集する", edit_public_delivery_address_path(d.id), class:"btn btn-outline-primary btn-sm mr-auto md-1 mr-5" %>
+                                    <%= link_to "削除する", public_delivery_address_path(d.id), method: :delete, class:"btn btn-outline-danger btn-sm md-1 ml-5", data: {confirm: "本当に消去しますか？"} %>
+                                </td>
+                            </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+        </div>
+    </div>
 </div>
-
-<h3><u>配送先登録/一覧</u></h3>
-
-<!------------ 配送先登録部分 ------------>
-<%= form_with model: @delivery_address, url: public_delivery_addresses_path, local: true do |f| %>
-    <%= render 'layouts/error_messages', model: f.object %>
-    <div class="row form-group pt-3">
-        <div class="col-md-3"><%= f.label :郵便番号 %></div>
-        <div class="col-md-4"><%= f.text_field :post_code, autofocus: true, placeholder:"0000000", class:"form-control" %></div>
-    </div>
-
-    <div class="row form-group">
-        <div class="col-md-3"><%= f.label :住所 %></div>
-        <div class="col-md-7"><%= f.text_area :address, placeholder:"東京都渋谷区代々木神園町0-0", class:"form-control" %></div>
-    </div>
-
-    <div class="row form-group">
-        <div class="col-md-3"><%= f.label :宛名 %></div>
-        <div class="col-md-4 md-2"><%= f.text_field :name, placeholder:"令和道子", class:"form-control" %></div>
-    </div>
-
-    <div class="col-md-10 text-right">
-        <%= f.submit "新規登録", class: "btn btn-outline-primary btn-lg" %>
-    </div>
-<% end %>
-
-<!------------ 配送先一覧部分 ------------>
-<table class="table table-light table-striped mt-5 col-12">
-    <thead class="table-active">
-        <tr class="text-white bg-dark">
-            <th>郵便番号</th>
-            <th>住所</th>
-            <th>宛名</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @delivery_addresses.each do |d| %>
-            <tr>
-                <td><%= d.post_code %></td>
-                <td><%= d.address %></td>
-                <td><%= d.name %></td>
-                <td class="text-center">
-                    <%= link_to "編集する", edit_public_delivery_address_path(d.id), class:"btn btn-primary btn-sm mr-auto md-1 mr-5" %>
-                    <%= link_to "削除する", public_delivery_address_path(d.id), method: :delete, class:"btn btn-danger btn-sm md-1 ml-5", data: {confirm: "本当に消去しますか？"} %>
-                </td>
-            </tr>
-        <% end %>
-    </tbody>
-</table>
