--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -5,7 +5,7 @@
       <h2><u>注文履歴一覧</u></h2>
     </div>
     <div class="col-md-12">
-      <table class="table table-bordered border border-dark">
+      <table class="table table-hover table-bordered border border-dark">
         <thead>
           <th class="info border border-dark table-active">注文日</th>
           <th class="info border border-dark table-active">配送先</th>
@@ -38,7 +38,7 @@
               <!-- 注文ステータス  -->
               <td><%= order.order_status_i18n %></td>
               <!-- 注文履歴詳細へ  -->
-              <td><%= link_to "表示する", public_order_path(order), class:"btn btn-primary" %></td>
+              <td><%= link_to "表示する", public_order_path(order), class:"btn btn-outline-primary" %></td>
             </tr>
           <% end %>
         </tbody>
