--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class='container'>
-  <div class = "flash_message"><%= flash[:notice] %></div>
+  <div class = "flash_message text-center text-danger"><%= flash[:danger] %></div>
   <div class="row">
     <div class="col-12" style="position: relative;">
       <div class="fluid2" style="position: absolute; top: 60px;"></div>
       <h3 class="row offset-1 mt-5" style="z-index: 100; position: relative;">新規会員登録</h3>
       <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
-
+        <%= render 'layouts/error_messages', model: f.object %>
         <div class="field form-group row">
           <%= f.label :"名前", class: "col-3" %>
           <%= f.label :"(姓)", class: "col-1" %>
