--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -58,7 +58,7 @@
       <%= link_to '編集する', edit_admin_customer_path, class: "btn btn-success" %>
     </div>
     <div class="col-md-3 offset-1">
-      <%= link_to '注文履歴一覧を見る',admin_order_detail_path(@order.customer.id), class: "btn btn-primary" %>
+      <%= link_to '注文履歴一覧を見る',admin_order_detail_path(@customer.id), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
